--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: "BwModelica";
+  src: url("../assets/BwModelicaExtraBoldCondensed.otf");
+}
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "BwModelica", Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -25,9 +30,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-image: url("../assets/fondo.jpg");
+  color: #ffffff;
 }
 
 h1 {
