--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,34 @@
-#derecha {
+.derecha {
+  width: 50%;
+  margin-left: 0;
+  margin-top: 7rem;
+}
+
+.izquierda {
+  margin: 5rem;
+  margin-top: 0rem;
+  width: 30%;
+}
+
+.condado {
   float: right;
   width: 50%;
-  margin-right: 60px;
+  text-align: center;
 }
-
-#izquierda {
+.calderon {
   float: left;
-  width: 45%;
+  width: 50%;
+  text-align: center;
+}
+.contenedor {
+  margin: auto;
+  display: flex;
 }
 
-#contenedor {
-  display: table;
-  margin: auto;
+.texto {
+  background: rgba(12, 10, 10, 0.5);
+  text-align: center;
+  border-radius: 15px;
+  padding: 2rem;
+  text-decoration: none;
 }
