--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@
   src: url("../assets/BwModelicaExtraBoldCondensed.otf");
 }
 :root {
-  font-family: "BwModelica", Inter, system-ui, Avenir, Helvetica, Arial,
-    sans-serif;
+  font-family: "BwModelica", Inter, system-ui, Avenir, Helvetica;
   line-height: 1.5;
   font-weight: 400;
 
@@ -29,9 +28,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   background-image: url("../assets/fondo.jpg");
   color: #ffffff;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 h1 {
@@ -41,17 +41,15 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 3em;
   font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #00a2c6;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #7caeb9;
 }
 button:focus,
 button:focus-visible {
@@ -67,6 +65,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #00a2c6;
   }
 }
