--- a/components/Footer.css
+++ b/components/Footer.css
@@ -1,4 +1,9 @@
 .footer {
-  background-color: #1d1d1d;
   padding: 1.2rem;
+  display: inline-block;
+  width: 30%;
+}
+
+footer {
+  background-color: #1d1d1d;
 }
