--- a/components/MainNavigation.module.css
+++ b/components/MainNavigation.module.css
@@ -1,9 +1,10 @@
 .header {
-  max-width: 60rem;
-  margin: auto;
-  padding: 2rem;
+  width: 95%;
+  margin: 1rem auto;
+  padding: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 li {
@@ -14,6 +15,9 @@ li {
   gap: 2rem;
 }
 
+.logo {
+  width: 12rem;
+}
 .list a {
   text-decoration: none;
   color: var(--color-primary-400);
