--- a/pages/Ventas.module.css
+++ b/pages/Ventas.module.css
@@ -1,5 +1,25 @@
 .ventas {
   margin: auto;
   align-content: center;
-  width: 60%;
+  width: 80%;
+  position: relative;
+}
+
+.ul {
+  position: "absolute";
+  top: "1000px";
+  left: "150px";
+  width: "80%";
+  background: "#fff";
+  border: "1px solid #ccc";
+  padding: "0";
+  margin: "0";
+  maxheight: "150px";
+  zindex: 1000;
+  color: "#000";
+}
+.li {
+  padding: "3px";
+  cursor: "pointer";
+  borderbottom: "1px solid #f0f0f0";
 }
