--- a/pages/Ventas.module.css
+++ b/pages/Ventas.module.css
@@ -2,6 +2,7 @@
   margin: auto;
   align-content: center;
   width: 80%;
+  max-width: 600px;
   position: relative;
 }
 
@@ -10,6 +11,7 @@
   top: "1000px";
   left: "150px";
   width: "80%";
+
   background: "#fff";
   border: "1px solid #ccc";
   padding: "0";
